# des-hyperneat

./: .gitignore  Cargo.toml  README.md  flame_highlight.py  profile  texrender
data/: Cargo.toml
data/src/: accuracy.rs  conf.rs  dataset.rs  error.rs  lib.rs
datasets/: iris  iris.py  mnist  mnist.py  retina.py  wine  wine.py  xor  xoro
db/: Cargo.toml
db/src/: conf.rs  lib.rs
evolution/: Cargo.toml
evolution/src/: algorithm.rs  conf.rs  develop.rs  environment.rs  evaluate.rs  genome.rs  lib.rs  log.rs  organism.rs  population.rs  species.rs  stats.rs
evolution/src/neat/: conf.rs  developer.rs  genome.rs  genome_core.rs  link.rs  mod.rs  node.rs  phenotype.rs  state.rs
evolution/src/neat/neat_macro/: Cargo.toml
evolution/src/neat/neat_macro/src/: lib.rs
figure/: Cargo.toml
figure/src/: edge.rs  label.rs  lib.rs  node.rs  substrate.rs
figures/: Cargo.toml
figures/src/: assembled.rs  assembled_a.rs  assembled_b.rs  assembled_c.rs  assembled_d.rs  assembled_e.rs  assembled_f.rs  assembled_g.rs  assembled_h.rs  blueprint.rs  cppn.rs  cppn_2.rs  identity_mapping.rs  identity_mapping_b.rs  io_config.rs  jumper_connections.rs  layered_cppn.rs  layered_cppn_b.rs  layout.rs  layout_small.rs  layout_small_b.rs  local_connections.rs  main.rs  module.rs  neat.rs  neat_b.rs  neat_c.rs  quad_tree.rs  single_cppn.rs  single_cppn_layout.rs
jobs/: analyse.py  analyse2.py  clean_jobs.py  client.py  delete_batch.py  main.py  requirements.txt  reset_job.py  reset_jobs.py  run_batch.py  schedule_batch_0.py  schedule_jobs.py  scheduler.py  work.py  worker.py
jobs/analisys/: analisys.py  analisys_2.py  analisys_old.py  analisys_time.py  collect_1.py  collect_2.py  collect_3.py  collect_4.py  collect_5.py  collect_6.py  collect_7.py  collect_8.py
jobs/batches/: batch_0.py  batch_1.py  batch_10.py  batch_11.py  batch_12.py  batch_13.py  batch_14.py  batch_15.py  batch_16.py  batch_17.py  batch_18.py  batch_19.py  batch_2.py  batch_20.py  batch_21.py  batch_22.py  batch_23.py  batch_24.py  batch_25.py  batch_26.py  batch_27.py  batch_29.py  batch_3.py  batch_30.py  batch_31.py  batch_32.py  batch_33.py  batch_34.py  batch_35.py  batch_36.py  batch_37.py  batch_38.py  batch_39.py  batch_4.py  batch_40.py  batch_41.py  batch_42.py  batch_43.py  batch_44.py  batch_45.py  (+27 more)
jobs/src/: clean.py  client.py  delete.py  scheduler.py  worker.py
network/: Cargo.toml
network/src/: activation.rs  connection.rs  execute.rs  lib.rs
src/: conf.rs  dataset_environment.rs  main.rs
src/codeshyperneat/: conf.rs  develop.rs  developer.rs  genome.rs  link.rs  mod.rs  node.rs  state.rs
src/conf/: eshyperneat.rs  general.rs  hyperneat.rs  mod.rs  neat.rs
src/cppn/: conf.rs  developer.rs  dot.rs  genome.rs  log.rs  mod.rs  node.rs  phenotype.rs
src/data/: batch.rs  conf.rs  dataset.rs  error.rs  mod.rs
src/deshyperneat/: conf.rs  desgenome.rs  developer.rs  figure.rs  (+6 more)
(+75 files in other folders)
