[package]
name = "des-hyperneat"
version = "0.1.0"
authors = ["Amund Tenstad <github@amund.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
lazy_static = "1.4.0"
envconfig = "0.6.0"
envconfig_derive = "0.6.0"
image = "0.23"
derive-new = "0.5.8"
network = {path = "network"}
evolution = {path = "evolution"}
data = {path = "data"}

[workspace]
members = [
  "figure",
  "figures",
  "network",
  "evolution",
  "data",
]

[profile.release]
debug = true
