[package]
name = "des-hyperneat"
version = "0.1.0"
authors = ["Amund Tenstad <github@amund.io>"]
edition = "2018"

[dependencies]
rand = "0.6.0"
lazy_static = "1.4.0"
envconfig = "0.6.0"
envconfig_derive = "0.6.0"
derive-new = "0.5.8"
image = "0.23"
order-stat = "0.1"
serde = "1.0.110"
serde_json = "1.0"
bson = "0.14.1"
num_cpus = "1.13.0"
network = {path = "network"}
evolution = {path = "evolution"}
neat_macro = {path = "evolution/src/neat/neat_macro"}
data = {path = "data"}
figure = {path = "figure"}

[workspace]
members = [
  "figure",
  "figures",
  "network",
  "evolution",
  "evolution/src/neat/neat_macro",
  "data",
  "db",
]

[profile.release]
debug = true
