[package]
name = "db"
version = "0.1.0"
authors = ["Amund Tenstad <github@amund.io>"]
edition = "2018"

[dependencies]
bson = "0.14.1"
serde = "1.0.110"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
envconfig = "0.6.0"
envconfig_derive = "0.6.0"
hex = "0.4.2"

[dependencies.mongodb]
version = "0.10.0"
default-features = false
features = ["sync"]
