[package]
name = "evolution"
version = "0.1.0"
authors = ["Amund Tenstad <github@amund.io>"]
edition = "2018"

[dependencies]
rand = "0.6.0"
derive-new = "0.5.8"
lazy_static = "1.4.0"
envconfig = "0.6.0"
envconfig_derive = "0.6.0"
crossbeam = "0.7.3"
serde = "1.0.110"
serde_json = "1.0"
serde_yaml = "0.8"
bson = "0.14.1"
network = {path = "../network"}
db = {path = "../db"}
neat_macro = {path = "src/neat/neat_macro"}
